--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,17 @@
+spring:
+  application:
+    name: feign-retryable-example
+
+server:
+  port: 8081
+
 logging:
   level:
+    org:
+      springframework:
+        web:
+          servlet:
+            DispatcherServlet: INFO
     com.benjsoft.feignretryableexample: DEBUG
 
 feign:
